syntax="proto3";

package proto;

//storage
message BaseAccount {
    bytes Available = 1;
    bytes Subscribed = 2;
    bytes Invested = 3;
    bytes Locked = 4; //locked for loan interest to pay
}

message LoanAccount {
    bytes Available = 1;
    bytes Invested = 2;
}

message Account {
    bytes Token = 1;
    BaseAccount BaseAccount = 2;
    LoanAccount LoanAccount = 3;
}

message Fund {
    bytes Address = 1; // not set on save
    repeated Account Accounts = 2;
}

//newLoanEvent
message Loan {
    uint64 Id = 1;
    bytes Address = 2;
    bytes Token = 3;
    bytes ShareAmount = 4;
    int64 Shares = 5;
    bytes Interest = 6;
    uint64 DayRate = 7;
    uint64 SubscribeDays = 8;
    uint64 ExpireDays = 9;
    uint64 SubscribedShares = 10;
    uint64 ExpireHeight = 11;
    bytes Invested = 12;
    // 1 open, 2 success, 3 failed, 4 expired, 5 fail refunded, 6 expire refunded
    int32 Status = 13;
    int64 Created = 14;
    int64 StartTime = 15;
    int64 Updated = 16;
}

//storage+event
message Subscription {
    uint64 Id = 1;
    uint64 LoanId = 2;
    bytes Address = 3;
    bytes Token = 4;
    bytes ShareAmount = 5;
    uint64 Shares = 6;
    bytes Interest = 7;
    // 1 open, 2 success, 3 failed, 4 expired, 5 fail refunded, 6 expire refunded
    uint64 Status = 8;
    int64 Created = 9;
    int64 Updated = 10;
}

message Invest {
    uint64 Id = 1;
    uint64 LoadId = 2;
    bytes Address = 3;
    bytes LoadAmount = 4;
    bytes BaseAmount = 5;
    int32 BizType = 6;
    bytes Beneficial = 7;
    uint64 CreateHeight = 8;
    uint64 ExpireHeight = 9;
    // 1 pending, 2 success, 3 failed, 4 expired, 5 fail refunded, 6 expire refunded
    int32 Status = 11;
    int64 Created = 12;
    int64 Updated = 13;
}

message SBPRegistration {
    uint64 InvestId = 1;
    string Name = 2;
    bytes ProducingAddress = 3;
    bytes RewardWithdrawAddress = 4;
}

//event
message LoanUpdate {
    uint64 Id = 1;
    uint64 SubscribedShares = 2;
    bytes Invested = 3;
    int32 Status = 4;
    int64 Timestamp = 5;
}

message SubscriptionUpdate {
    uint64 Id = 1;
    uint64 Shares = 2;
    int32 Status = 3;
}

message InvestUpdate {
    uint64 Id = 1;
    uint64 Status = 2;
}

message BaseAccountUpdate {
    bytes Address = 1;
    // 1 deposit, 2 withdraw, 3 subscribe, 4 invest,
    // 5 interest lock, 6 interest reduce, 7 interest release, 8 interest settle,
    // 9 refund expire sub, 10 refund failed sub, 11 refund invest
    uint64 BizType = 2;
    // 1. reg sbp, 2 SVIP stake, 3 mining stake, 4 quota stake
    uint64 InvestType = 3;
    uint64 LoanId = 4;
    bytes Amount = 5;
}

message LoanAccountUpdate {
    bytes Address = 1;
    // 1 new success loan, 2 refund loan, 3 invest, 4 refund invest
    uint64 BizType = 2;
    // 1. reg sbp, 2 SVIP stake, 3 mining stake, 4 quota stake
    uint64 InvestType = 3;
    uint64 LoanId = 4;
    bytes Amount = 5;
}